--- a/index.html
+++ b/index.html
@@ -190,9 +190,9 @@ Providing peptides intended exclusively for in vitro and laboratory research app
   </label>
 
 <select id="retaVariant" class="variant-select" style="width:100%; padding:12px 14px; border-radius:12px;">
-  <option value="optA" data-price="120.00" data-sku="FL-RT-A" data-label="10mg">10mg</option>
-  <option value="optB" data-price="200.00" data-sku="FL-RT-B" data-label="20mg">20mg</option>
-  <option value="optC" data-price="275.00" data-sku="FL-RT-C" data-label="30mg">30mg</option>
+  <option value="optA" data-price="70.00" data-sku="FL-RT-A" data-label="10mg">10mg</option>
+  <option value="optB" data-price="135.00" data-sku="FL-RT-B" data-label="20mg">20mg</option>
+  <option value="optC" data-price="175.00" data-sku="FL-RT-C" data-label="30mg">30mg</option>
 </select>
 </div>
 
@@ -229,7 +229,7 @@ Providing peptides intended exclusively for in vitro and laboratory research app
   <div class="product-thumb">
     <span class="tag">Live</span>
     <img
-      src="./assets/images/semaglutideproduct.png"
+      src="./assets/images/sema.png"
       alt="Semaglutide vial"
       class="thumb-img"
     />
@@ -241,7 +241,7 @@ Providing peptides intended exclusively for in vitro and laboratory research app
         <h3 class="product-title" id="semaTitle">Semaglutide</h3>
         <p class="muted small">Research use only • Laboratory supply</p>
       </div>
-      <div class="product-price" id="semaPriceDisplay">$90.00</div>
+      <div class="product-price" id="semaPriceDisplay">$60.00</div>
     </div>
 
     <p class="product-desc">
@@ -260,9 +260,9 @@ Providing peptides intended exclusively for in vitro and laboratory research app
       </label>
 
       <select id="semaVariant" class="variant-select" style="width:100%; padding:12px 14px; border-radius:12px;">
-        <option value="optA" data-price="90.00" data-sku="FL-SEMA-A" data-label="5mg">5mg</option>
-        <option value="optB" data-price="145.00" data-sku="FL-SEMA-B" data-label="10mg">10mg</option>
-        <option value="optC" data-price="210.00" data-sku="FL-SEMA-C" data-label="15mg">15mg</option>
+        <option value="optA" data-price="65.00" data-sku="FL-SEMA-A" data-label="5mg">5mg</option>
+        <option value="optB" data-price="125.00" data-sku="FL-SEMA-B" data-label="10mg">10mg</option>
+        <option value="optC" data-price="185.00" data-sku="FL-SEMA-C" data-label="15mg">15mg</option>
       </select>
     </div>
 
@@ -275,7 +275,7 @@ Providing peptides intended exclusively for in vitro and laboratory research app
       <input type="hidden" name="item_name" value="Semaglutide – Research Product (Includes Essentials)">
       <input type="hidden" name="item_number" value="FL-SEMA-A" data-pp="sku">
       <input type="hidden" name="custom" value="Size: 5mg" data-pp="custom">
-      <input type="hidden" name="amount" value="90.00" data-pp="amount">
+      <input type="hidden" name="amount" value="65.00" data-pp="amount">
 
       <input type="hidden" name="shipping" value="14.95">
       <input type="hidden" name="quantity" value="1">
@@ -294,7 +294,7 @@ Providing peptides intended exclusively for in vitro and laboratory research app
   <div class="product-thumb">
     <span class="tag">Live</span>
     <img
-      src="./assets/images/tirzepatideproduct.png"
+      src="./assets/images/tirz.png"
       alt="Tirzepatide vial"
       class="thumb-img"
     />
@@ -306,7 +306,7 @@ Providing peptides intended exclusively for in vitro and laboratory research app
         <h3 class="product-title" id="tirzTitle">Tirzepatide</h3>
         <p class="muted small">Research use only • Laboratory supply</p>
       </div>
-      <div class="product-price" id="tirzPriceDisplay">$110.00</div>
+      <div class="product-price" id="tirzPriceDisplay">$65.00</div>
     </div>
 
     <p class="product-desc">
@@ -325,9 +325,9 @@ Providing peptides intended exclusively for in vitro and laboratory research app
       </label>
 
       <select id="tirzVariant" class="variant-select" style="width:100%; padding:12px 14px; border-radius:12px;">
-        <option value="optA" data-price="110.00" data-sku="FL-TIRZ-A" data-label="10mg">10mg</option>
-        <option value="optB" data-price="185.00" data-sku="FL-TIRZ-B" data-label="20mg">20mg</option>
-        <option value="optC" data-price="260.00" data-sku="FL-TIRZ-C" data-label="30mg">30mg</option>
+        <option value="optA" data-price="65.00" data-sku="FL-TIRZ-A" data-label="10mg">10mg</option>
+        <option value="optB" data-price="125.00" data-sku="FL-TIRZ-B" data-label="20mg">20mg</option>
+        <option value="optC" data-price="185.00" data-sku="FL-TIRZ-C" data-label="30mg">30mg</option>
       </select>
     </div>
 
@@ -340,7 +340,7 @@ Providing peptides intended exclusively for in vitro and laboratory research app
       <input type="hidden" name="item_name" value="Tirzepatide – Research Product (Includes Essentials)">
       <input type="hidden" name="item_number" value="FL-TIRZ-A" data-pp="sku">
       <input type="hidden" name="custom" value="Size: 10mg" data-pp="custom">
-      <input type="hidden" name="amount" value="110.00" data-pp="amount">
+      <input type="hidden" name="amount" value="65.00" data-pp="amount">
 
       <input type="hidden" name="shipping" value="14.95">
       <input type="hidden" name="quantity" value="1">
@@ -359,7 +359,7 @@ Providing peptides intended exclusively for in vitro and laboratory research app
   <div class="product-thumb">
     <span class="tag">Live</span>
     <img
-      src="./assets/images/ghkproduct.png"
+      src="./assets/images/ghk-cu.png"
       alt="GHK-Cu vial"
       class="thumb-img"
     />
@@ -371,7 +371,7 @@ Providing peptides intended exclusively for in vitro and laboratory research app
         <h3 class="product-title" id="ghkTitle">GHK-Cu</h3>
         <p class="muted small">Research use only • Laboratory supply</p>
       </div>
-      <div class="product-price" id="ghkPriceDisplay">$65.00</div>
+      <div class="product-price" id="ghkPriceDisplay">$50.00</div>
     </div>
 
     <p class="product-desc">
@@ -390,9 +390,8 @@ Providing peptides intended exclusively for in vitro and laboratory research app
       </label>
 
       <select id="ghkVariant" class="variant-select" style="width:100%; padding:12px 14px; border-radius:12px;">
-        <option value="optA" data-price="65.00" data-sku="FL-GHK-A" data-label="10mg">10mg</option>
-        <option value="optB" data-price="95.00" data-sku="FL-GHK-B" data-label="20mg">20mg</option>
-        <option value="optC" data-price="125.00" data-sku="FL-GHK-C" data-label="30mg">30mg</option>
+        <option value="optA" data-price="50.00" data-sku="FL-GHK-A" data-label="50mg">50mg</option>
+        <option value="optB" data-price="85.00" data-sku="FL-GHK-B" data-label="100mg">100mg</option>
       </select>
     </div>
 
@@ -404,8 +403,8 @@ Providing peptides intended exclusively for in vitro and laboratory research app
 
       <input type="hidden" name="item_name" value="GHK-Cu – Research Product (Includes Essentials)">
       <input type="hidden" name="item_number" value="FL-GHK-A" data-pp="sku">
-      <input type="hidden" name="custom" value="Size: 10mg" data-pp="custom">
-      <input type="hidden" name="amount" value="65.00" data-pp="amount">
+      <input type="hidden" name="custom" value="Size: 50mg" data-pp="custom">
+      <input type="hidden" name="amount" value="50.00" data-pp="amount">
 
       <input type="hidden" name="shipping" value="14.95">
       <input type="hidden" name="quantity" value="1">
@@ -424,7 +423,7 @@ Providing peptides intended exclusively for in vitro and laboratory research app
   <div class="product-thumb">
     <span class="tag">Live</span>
     <img
-      src="./assets/images/mt2product.png"
+      src="./assets/images/mt-2.png"
       alt="MT-2 vial"
       class="thumb-img"
     />
@@ -436,7 +435,7 @@ Providing peptides intended exclusively for in vitro and laboratory research app
         <h3 class="product-title" id="mt2Title">MT-2</h3>
         <p class="muted small">Research use only • Laboratory supply</p>
       </div>
-      <div class="product-price" id="mt2PriceDisplay">$55.00</div>
+      <div class="product-price" id="mt2PriceDisplay">$65.00</div>
     </div>
 
     <p class="product-desc">
@@ -455,9 +454,7 @@ Providing peptides intended exclusively for in vitro and laboratory research app
       </label>
 
       <select id="mt2Variant" class="variant-select" style="width:100%; padding:12px 14px; border-radius:12px;">
-        <option value="optA" data-price="55.00" data-sku="FL-MT2-A" data-label="10mg">10mg</option>
-        <option value="optB" data-price="80.00" data-sku="FL-MT2-B" data-label="20mg">20mg</option>
-        <option value="optC" data-price="105.00" data-sku="FL-MT2-C" data-label="30mg">30mg</option>
+        <option value="optA" data-price="65.00" data-sku="FL-MT2-A" data-label="10mg">10mg</option>
       </select>
     </div>
 
@@ -470,7 +467,7 @@ Providing peptides intended exclusively for in vitro and laboratory research app
       <input type="hidden" name="item_name" value="MT-2 – Research Product (Includes Essentials)">
       <input type="hidden" name="item_number" value="FL-MT2-A" data-pp="sku">
       <input type="hidden" name="custom" value="Size: 10mg" data-pp="custom">
-      <input type="hidden" name="amount" value="55.00" data-pp="amount">
+      <input type="hidden" name="amount" value="65.00" data-pp="amount">
 
       <input type="hidden" name="shipping" value="14.95">
       <input type="hidden" name="quantity" value="1">
