--- a/index.html
+++ b/index.html
@@ -190,9 +190,9 @@ Providing peptides intended exclusively for in vitro and laboratory research app
   </label>
 
 <select id="retaVariant" class="variant-select" style="width:100%; padding:12px 14px; border-radius:12px;">
-  <option value="optA" data-price="70.00" data-sku="FL-RT-A" data-label="10mg">10mg</option>
-  <option value="optB" data-price="135.00" data-sku="FL-RT-B" data-label="20mg">20mg</option>
-  <option value="optC" data-price="175.00" data-sku="FL-RT-C" data-label="30mg">30mg</option>
+  <option value="optA" data-price="70.00" data-sku="FL-RT-10" data-label="10mg">10mg</option>
+  <option value="optB" data-price="135.00" data-sku="FL-RT-20" data-label="20mg">20mg</option>
+  <option value="optC" data-price="175.00" data-sku="FL-RT-30" data-label="30mg">30mg</option>
 </select>
 </div>
 
@@ -260,9 +260,9 @@ Providing peptides intended exclusively for in vitro and laboratory research app
       </label>
 
       <select id="semaVariant" class="variant-select" style="width:100%; padding:12px 14px; border-radius:12px;">
-        <option value="optA" data-price="65.00" data-sku="FL-SEMA-A" data-label="5mg">5mg</option>
-        <option value="optB" data-price="125.00" data-sku="FL-SEMA-B" data-label="10mg">10mg</option>
-        <option value="optC" data-price="185.00" data-sku="FL-SEMA-C" data-label="15mg">15mg</option>
+        <option value="optA" data-price="65.00" data-sku="FL-SEMA-10" data-label="10mg">10mg</option>
+        <option value="optB" data-price="125.00" data-sku="FL-SEMA-20" data-label="15mg">20mg</option>
+        <option value="optC" data-price="185.00" data-sku="FL-SEMA-30" data-label="15mg">30mg</option>
       </select>
     </div>
 
@@ -325,9 +325,9 @@ Providing peptides intended exclusively for in vitro and laboratory research app
       </label>
 
       <select id="tirzVariant" class="variant-select" style="width:100%; padding:12px 14px; border-radius:12px;">
-        <option value="optA" data-price="65.00" data-sku="FL-TIRZ-A" data-label="10mg">10mg</option>
-        <option value="optB" data-price="125.00" data-sku="FL-TIRZ-B" data-label="20mg">20mg</option>
-        <option value="optC" data-price="185.00" data-sku="FL-TIRZ-C" data-label="30mg">30mg</option>
+        <option value="optA" data-price="65.00" data-sku="FL-TIRZ-10" data-label="10mg">10mg</option>
+        <option value="optB" data-price="125.00" data-sku="FL-TIRZ-20" data-label="20mg">20mg</option>
+        <option value="optC" data-price="185.00" data-sku="FL-TIRZ-30" data-label="30mg">30mg</option>
       </select>
     </div>
 
@@ -390,8 +390,8 @@ Providing peptides intended exclusively for in vitro and laboratory research app
       </label>
 
       <select id="ghkVariant" class="variant-select" style="width:100%; padding:12px 14px; border-radius:12px;">
-        <option value="optA" data-price="50.00" data-sku="FL-GHK-A" data-label="50mg">50mg</option>
-        <option value="optB" data-price="85.00" data-sku="FL-GHK-B" data-label="100mg">100mg</option>
+        <option value="optA" data-price="50.00" data-sku="FL-GHK-50" data-label="50mg">50mg</option>
+        <option value="optB" data-price="85.00" data-sku="FL-GHK-100" data-label="100mg">100mg</option>
       </select>
     </div>
 
@@ -454,7 +454,7 @@ Providing peptides intended exclusively for in vitro and laboratory research app
       </label>
 
       <select id="mt2Variant" class="variant-select" style="width:100%; padding:12px 14px; border-radius:12px;">
-        <option value="optA" data-price="65.00" data-sku="FL-MT2-A" data-label="10mg">10mg</option>
+        <option value="optA" data-price="65.00" data-sku="FL-MT2-10" data-label="10mg">10mg</option>
       </select>
     </div>
 
