--- a/index.html
+++ b/index.html
@@ -596,9 +596,10 @@ Peptides investigated in laboratory settings for cellular signaling and structur
           <a class="btn btn--ghost lab__btn" href="#shop">View available products</a>
 
           <!-- Replace href with your hosted COA PDF link (or a drive link) -->
-          <a class="btn lab__btn" href="./assets/COA_Retatrutide.pdf" target="_blank" rel="noopener noreferrer">
-            View lab report
-          </a>
+          <a class="btn btn--ghost" href="https://wa.me/13146861973" target="_blank" rel="noopener">
+       Ask about our results
+         </a>
+
         </div>
 
         <p class="lab__note">
@@ -624,7 +625,7 @@ Peptides investigated in laboratory settings for cellular signaling and structur
 
         <div class="lab-card__meta">
           <div><span class="lab-card__metaLabel">Batch:</span> FL-BAC-2025-11</div>
-          <div><span class="lab-card__metaLabel">Lab:</span> Supplier documentation</div>
+          <div><span class="lab-card__metaLabel">Lab:</span> Manufacturing partner documentation</div>
         </div>
       </aside>
     </div>
