--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@ Providing peptides intended exclusively for in vitro and laboratory research app
                 class="paypal-form"
               >
                 <input type="hidden" name="cmd" value="_xclick">
-                <input type="hidden" name="business" value="kuntzeemily@gmail.com">
+                <input type="hidden" name="business" value="payments@forgelabpeps.com">
                 <input type="hidden" name="currency_code" value="USD">
 
                 <input type="hidden" name="item_name" value="Retatrutide – Research Product (Includes Essentials)">
@@ -269,7 +269,7 @@ Providing peptides intended exclusively for in vitro and laboratory research app
     <!-- PayPal -->
     <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank" class="paypal-form">
       <input type="hidden" name="cmd" value="_xclick">
-      <input type="hidden" name="business" value="kuntzeemily@gmail.com">
+      <input type="hidden" name="business" value="payments@forgelabpeps.com">
       <input type="hidden" name="currency_code" value="USD">
 
       <input type="hidden" name="item_name" value="Semaglutide – Research Product (Includes Essentials)">
@@ -334,7 +334,7 @@ Providing peptides intended exclusively for in vitro and laboratory research app
     <!-- PayPal -->
     <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank" class="paypal-form">
       <input type="hidden" name="cmd" value="_xclick">
-      <input type="hidden" name="business" value="kuntzeemily@gmail.com">
+      <input type="hidden" name="business" value="payments@forgelabpeps.com">
       <input type="hidden" name="currency_code" value="USD">
 
       <input type="hidden" name="item_name" value="Tirzepatide – Research Product (Includes Essentials)">
@@ -398,7 +398,7 @@ Providing peptides intended exclusively for in vitro and laboratory research app
     <!-- PayPal -->
     <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank" class="paypal-form">
       <input type="hidden" name="cmd" value="_xclick">
-      <input type="hidden" name="business" value="kuntzeemily@gmail.com">
+      <input type="hidden" name="business" value="payments@forgelabpeps.com">
       <input type="hidden" name="currency_code" value="USD">
 
       <input type="hidden" name="item_name" value="GHK-Cu – Research Product (Includes Essentials)">
@@ -461,7 +461,7 @@ Providing peptides intended exclusively for in vitro and laboratory research app
     <!-- PayPal -->
     <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank" class="paypal-form">
       <input type="hidden" name="cmd" value="_xclick">
-      <input type="hidden" name="business" value="kuntzeemily@gmail.com">
+      <input type="hidden" name="business" value="payments@forgelabpeps.com">
       <input type="hidden" name="currency_code" value="USD">
 
       <input type="hidden" name="item_name" value="MT-2 – Research Product (Includes Essentials)">
@@ -653,7 +653,7 @@ Peptides investigated in laboratory settings for cellular signaling and structur
         </p>
 
         <div class="access-card__actions access-card__actions--stack">
-          <a class="access-btn access-btn--outline" href="mailto:kuntzeemily@gmail.com">
+          <a class="access-btn access-btn--outline" href="mailto:payments@forgelabpeps.com">
             ✉️ Email support
           </a>
 
