--- a/index.html
+++ b/index.html
@@ -216,6 +216,20 @@ Providing peptides intended exclusively for in vitro and laboratory research app
                 <input type="hidden" name="quantity" value="1">
 
                 <input type="hidden" name="no_note" value="1">
+                 <!-- Return URLs -->
+  <input
+    type="hidden"
+    name="return"
+    value="https://www.forgelabpeps.com/thank-you"
+  >
+  <input
+    type="hidden"
+    name="cancel_return"
+    value="https://www.forgelabpeps.com/checkout-cancelled"
+  >
+
+  <!-- Force POST return (cleaner + more reliable) -->
+  <input type="hidden" name="rm" value="2">
                 <input type="hidden" name="bn" value="PP-BuyNowBF">
 
                 <button type="submit" class="btn primary full">Buy Now</button>
@@ -280,6 +294,20 @@ Providing peptides intended exclusively for in vitro and laboratory research app
       <input type="hidden" name="shipping" value="14.95">
       <input type="hidden" name="quantity" value="1">
       <input type="hidden" name="no_note" value="1">
+       <!-- Return URLs -->
+  <input
+    type="hidden"
+    name="return"
+    value="https://www.forgelabpeps.com/thank-you"
+  >
+  <input
+    type="hidden"
+    name="cancel_return"
+    value="https://www.forgelabpeps.com/checkout-cancelled"
+  >
+
+  <!-- Force POST return (cleaner + more reliable) -->
+  <input type="hidden" name="rm" value="2">
       <input type="hidden" name="bn" value="PP-BuyNowBF">
 
       <button type="submit" class="btn primary full">Buy Now</button>
@@ -345,6 +373,20 @@ Providing peptides intended exclusively for in vitro and laboratory research app
       <input type="hidden" name="shipping" value="14.95">
       <input type="hidden" name="quantity" value="1">
       <input type="hidden" name="no_note" value="1">
+       <!-- Return URLs -->
+  <input
+    type="hidden"
+    name="return"
+    value="https://www.forgelabpeps.com/thank-you"
+  >
+  <input
+    type="hidden"
+    name="cancel_return"
+    value="https://www.forgelabpeps.com/checkout-cancelled"
+  >
+
+  <!-- Force POST return (cleaner + more reliable) -->
+  <input type="hidden" name="rm" value="2">
       <input type="hidden" name="bn" value="PP-BuyNowBF">
 
       <button type="submit" class="btn primary full">Buy Now</button>
@@ -409,6 +451,20 @@ Providing peptides intended exclusively for in vitro and laboratory research app
       <input type="hidden" name="shipping" value="14.95">
       <input type="hidden" name="quantity" value="1">
       <input type="hidden" name="no_note" value="1">
+       <!-- Return URLs -->
+  <input
+    type="hidden"
+    name="return"
+    value="https://www.forgelabpeps.com/thank-you"
+  >
+  <input
+    type="hidden"
+    name="cancel_return"
+    value="https://www.forgelabpeps.com/checkout-cancelled"
+  >
+
+  <!-- Force POST return (cleaner + more reliable) -->
+  <input type="hidden" name="rm" value="2">
       <input type="hidden" name="bn" value="PP-BuyNowBF">
 
       <button type="submit" class="btn primary full">Buy Now</button>
@@ -472,6 +528,20 @@ Providing peptides intended exclusively for in vitro and laboratory research app
       <input type="hidden" name="shipping" value="14.95">
       <input type="hidden" name="quantity" value="1">
       <input type="hidden" name="no_note" value="1">
+       <!-- Return URLs -->
+  <input
+    type="hidden"
+    name="return"
+    value="https://www.forgelabpeps.com/thank-you"
+  >
+  <input
+    type="hidden"
+    name="cancel_return"
+    value="https://www.forgelabpeps.com/checkout-cancelled"
+  >
+
+  <!-- Force POST return (cleaner + more reliable) -->
+  <input type="hidden" name="rm" value="2">
       <input type="hidden" name="bn" value="PP-BuyNowBF">
 
       <button type="submit" class="btn primary full">Buy Now</button>
