--- a/thank-you.html
+++ b/thank-you.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="./assets/css/styles.css" />
 </head>
 
-<body>
+<body class="page-thank-you">
 
   <!-- Sticky Nav -->
   <header class="site-header" id="top">
