--- a/thank-you.html
+++ b/thank-you.html
@@ -42,34 +42,28 @@
   </header>
 
   <!-- Page Content -->
-  <main class="page-offset">
-    <section class="thank-you-wrapper">
-      <div class="thank-you-card">
-        <h1>Thank you for your purchase</h1>
+ <main>
+  <section class="thank-you-wrapper">
+    <div class="thank-you-card">
+      <h1>Thank you for your purchase</h1>
 
-        <p>
-          Your payment has been successfully received, and your order is now being processed.
-        </p>
+      <p>Your payment has been successfully received, and your order is now being processed.</p>
 
-        <div class="divider"></div>
+      <p class="section-title">What happens next:</p>
+      <ul class="thank-you-list">
+        <li>Your order will be prepared and shipped within <strong>5–7 business days</strong>.</li>
+        <li>You will receive a follow-up email with your <strong>tracking information</strong> once shipped.</li>
+        <li>Estimated delivery time after shipment is <strong>9–12 business days</strong>.</li>
+      </ul>
 
-        <div class="shipping-details">
-          <p><strong>What happens next:</strong></p>
-          <p>• Your order will be prepared and shipped within <strong>5–7 business days</strong>.</p>
-          <p>• You will receive a follow-up email with your <strong>tracking information</strong> once shipped.</p>
-          <p>• Estimated delivery time after shipment is <strong>9–12 business days</strong>.</p>
-        </div>
+      <p class="support">
+        Questions about your order? Contact us at
+        <a href="mailto:support@forgelabpeps.com">support@forgelabpeps.com</a>.
+      </p>
+    </div>
+  </section>
+</main>
 
-        <div class="divider"></div>
-
-        <p class="support">
-          Questions about your order?  
-          Contact us at
-          <a href="mailto:support@forgelabpeps.com">support@forgelabpeps.com</a>.
-        </p>
-      </div>
-    </section>
-  </main>
 
   <!-- Footer -->
   <footer>
