--- a/index.html
+++ b/index.html
@@ -723,7 +723,7 @@ Peptides investigated in laboratory settings for cellular signaling and structur
         </p>
 
         <div class="access-card__actions access-card__actions--stack">
-          <a class="access-btn access-btn--outline" href="mailto:payments@forgelabpeps.com">
+          <a class="access-btn access-btn--outline" href="mailto:support@forgelabpeps.com">
             ✉️ Email support
           </a>
 
